feat: introduce creating user API (#21)
* feat: coding

* feat: create schema

* feat: create account

* add break line

* feat: create account

* feat: fix schema

* fix: modify schema

* fix: modify schema

* fix: error Token

* fix: add migrate

* feat: create account

* fix: create account

* fix: modify migration

* fix: modify openapi

* fix: modify openapi

* fix: modify openapi

* fix: delete method create information in controller

* fix: handle feedback

* fix: migrate

* fix: handle feedback

* fix: handle feedback

* fix: fix breakline

* fix: db.ts

* fix: modify relationship

* fix: handle feedback

* fix: handle feedback

* handle feedback

* fix: handle feedback

* fix: handle feedback

* fix: handle feedback

* fix: handle feedback

* fix: handle feedback

* fix: handle feedback

* fix: remove module not use

* fix: handle feedback

* fix: modify table name

* fix: api create account

* fix: handle feedback

* fix: handle feedback
