# pkg/src/components/user/dto/error-response-body.dto.ts
@@ -1,0 +1,17 @@
+/**
+ * COMPAON API
+ * API definition for COMPAON
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: compaon@dalavina.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { ErrorDetail } from './error-detail.dto';
+
+export interface ErrorResponseBody {
+    message: string;
+    details: Array<ErrorDetail>;
+}
