# pkg/src/components/user/dto/user.dto.ts
@@ -1,0 +1,32 @@
+/**
+ * COMPAON API
+ * API definition for COMPAON
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: compaon@dalavina.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { Information } from './information.dto';
+
+export interface User {
+    readonly id: number;
+    phone: string;
+    password: string;
+    department_id?: number;
+    role_id: number;
+    status: User.StatusEnum;
+    information: Information;
+}
+// eslint-disable-next-line @typescript-eslint/no-namespace
+export namespace User {
+    export type StatusEnum = 'active' | 'deactivate' | 'deleted';
+    export const StatusEnum = {
+        Active: 'active' as StatusEnum,
+        Deactivate: 'deactivate' as StatusEnum,
+        Deleted: 'deleted' as StatusEnum,
+    };
+}
